<resources>
    <string name="app_name">Orai</string>
    <string name="login_username">Vartotojo vardas</string>
    <string name="login_password">Slaptažodis</string>
    <string name="login_button">Prisijungti</string>

    <string name="login_u_error">Klaidingai ivestas Vartotojo vardas</string>
    <string name="login_p_error">Klaidingai ivestas Slpatažodis</string>

    <string name="register_button">Registruotis</string>
    <string name="register_name">Registracija</string>
    <string name="register_email">Email</string>
    <string name="register_email_error">Klaidingai ivestas Email</string>

    <string name="add_weather">Pridėti naują įrašą</string>
    <string name="main_edit_button">Redaguoti</string>
    <string name="main_delete_button">Trinti</string>

    <string name="edit_popuop_country">Įveskite valstybės pavadinimą</string>
    <string name="edit_popuop_degrees">Įveskite laipsnius</string>
    <string name="edit_popuop_save_button">Išsaugoti</string>



</resources>