<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="394dp"
        android:layout_height="41dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_username"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_button"
      />


</LinearLayout>